--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -4,14 +4,14 @@ services:
     build:
       args:
         RIDI_ROUTER_VERSION: v0.4.0
-        OPEN_OBSERVE_ORG: ${OPEN_OBSERVE_ORG}
-        OPEN_OBSERVE_TOKEN: ${OPEN_OBSERVE_TOKEN}
       context: .
       dockerfile: ./Dockerfile
     volumes:
       - ${RIDI_DATA_DIR}:/ridi-data
     environment:
-      - RIDI_DATA_DIR:${RIDI_DATA_DIR}
+      - RIDI_DATA_DIR: ${RIDI_DATA_DIR}
+      - OPEN_OBSERVE_ORG: ${OPEN_OBSERVE_ORG}
+      - OPEN_OBSERVE_TOKEN: ${OPEN_OBSERVE_TOKEN}
     healthcheck:
       test: curl --fail http://localhost:2727 || exit 1
       interval: 60s
