--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ${RIDI_DATA_DIR}:/ridi-data
     environment:
-      - RIDI_DATA_DIR: ${RIDI_DATA_DIR}
+      RIDI_DATA_DIR: ${RIDI_DATA_DIR}
     healthcheck:
       test: curl --fail http://localhost:2727 || exit 1
       interval: 60s
