--- a/apps/ridi-router/docker-compose-map-data-handler.yaml
+++ b/apps/ridi-router/docker-compose-map-data-handler.yaml
@@ -1,6 +1,6 @@
 name: map-data-handler
 services:
-  map-data-handler/:
+  map_data_handler:
     extends:
       file: ./docker-compose-base.yaml
       service: deno-service
