--- a/apps/ridi-router/docker-compose-deploy-handler.yaml
+++ b/apps/ridi-router/docker-compose-deploy-handler.yaml
@@ -1,6 +1,6 @@
 name: deploy-handler
 services:
-  deploy-handler/:
+  deploy_handler:
     extends:
       file: ./docker-compose-base.yaml
       service: deno-service
