chore: fixes for end-to-end test wip

--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -10,3 +10,4 @@ COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER=lslfd
 COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER=dlkslkf
 RIDI_ENV_NAME=deploy-handler
 RIDI_ENV=local
+OSM_DATA_BASE_URL=https://download.geofabrik.de
