--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -11,11 +11,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.15.5",
     "astro-navbar": "^2.3.3",
+    "clsx": "^2.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
