feat: reouter handler

--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -1,4 +1,5 @@
 SUPABASE_URL=xxx
+SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 SUPABASE_SECRET_KEY=xxx
 REGION_LIST="../region-list-local.json"
 RIDI_ROUTER_VERSION=v0.4.0
@@ -11,3 +12,5 @@ COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER=dlkslkf
 RIDI_ENV_NAME=deploy-handler
 RIDI_ENV=local
 OSM_DATA_BASE_URL=https://download.geofabrik.de
+OPEN_OBSERVE_ORG=org
+OPEN_OBSERVE_TOKEN=token
