--- a/apps/ridi-router/router-handler/deno.json
+++ b/apps/ridi-router/router-handler/deno.json
@@ -3,6 +3,7 @@
 		"dev": "deno run -A --unstable-ffi --env-file=../.env --watch main.ts"
 	},
 	"imports": {
-		"@std/assert": "jsr:@std/assert@1"
+		"valibot": "jsr:@valibot/valibot@0.42.1",
+		"postgres": "npm:postgres"
 	}
 }
