--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -10,6 +10,7 @@ services:
       - ${RIDI_DATA_DIR}:/ridi-data
     environment:
       RIDI_DATA_DIR: ${RIDI_DATA_DIR}
+      PORT: 2727
     healthcheck:
       test: curl --fail http://localhost:2727 || exit 1
       interval: 60s
