--- a/apps/ridi-router/router-handler/deno.json
+++ b/apps/ridi-router/router-handler/deno.json
@@ -1,6 +1,6 @@
 {
 	"tasks": {
-		"dev": "deno run -A --unstable-ffi --env-file=../.env --watch main.ts"
+		"dev": "deno run -A --unstable-ffi --env-file=../.env --env-file=.env --watch main.ts"
 	},
 	"imports": {
 		"valibot": "jsr:@valibot/valibot@0.42.1",
