feat: deno workspaces

--- a/apps/ridi-router/deno.json
+++ b/apps/ridi-router/deno.json
@@ -1,11 +1,12 @@
 {
 	"tasks": {
-		"install": "cd ./deploy-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../map-data-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../router-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts"
+		"install": "cd ./deploy-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../map-data-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../router-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../function-trpc && deno install --lock deno.lock --frozen=false --entrypoint index.ts"
 	},
 	"workspace": [
 		"./deploy-handler",
 		"./map-data-handler",
 		"./router-handler",
-		"./lib"
+		"./lib",
+		"./function-trpc"
 	]
 }
