--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -243,3 +243,7 @@ s3_region = "env(S3_REGION)"
 s3_access_key = "env(S3_ACCESS_KEY)"
 # Configures AWS_SECRET_ACCESS_KEY for S3 bucket
 s3_secret_key = "env(S3_SECRET_KEY)"
+
+[functions.trpc]
+entrypoint = "../apps/ridi-router/function-trpc/index.ts"
+import_map = "../apps/ridi-router/function-trpc/deno.jsonc"
