--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -244,6 +244,6 @@ s3_access_key = "env(S3_ACCESS_KEY)"
 # Configures AWS_SECRET_ACCESS_KEY for S3 bucket
 s3_secret_key = "env(S3_SECRET_KEY)"
 
-[functions.trpc]
-entrypoint = "../apps/ridi-router/function-trpc/index.ts"
-import_map = "../apps/ridi-router/function-trpc/deno.jsonc"
+# [functions.trpc]
+# entrypoint = "./functions/functions-trpc/index.ts"
+# import_map = "./functions/functions-trpc/deno.jsonc"
