--- a/apps/ridi-router/map-data-handler/deno.json
+++ b/apps/ridi-router/map-data-handler/deno.json
@@ -7,6 +7,8 @@
 		"p-queue": "npm:p-queue@8",
 		"to-geo-json": "npm:@tmcw/togeojson",
 		"xmldom": "npm:xmldom",
-		"postgres": "npm:postgres"
+		"postgres": "npm:postgres",
+		"@ridi-router/logging/": "../packages/logging/",
+		"@ridi-router/env/": "../packages/env/"
 	}
 }
