--- a/apps/ridi-router/router-handler/deno.json
+++ b/apps/ridi-router/router-handler/deno.json
@@ -4,6 +4,9 @@
 	},
 	"imports": {
 		"valibot": "jsr:@valibot/valibot@0.42.1",
-		"postgres": "npm:postgres"
+		"postgres": "npm:postgres",
+		"@ridi-router/logging/": "../packages/logging/",
+		"@ridi-router/env/": "../packages/env/",
+		"@ridi-router/messaging/": "../packages/messaging/"
 	}
 }
