--- a/apps/ridi-router/packages/logging/deno.jsonc
+++ b/apps/ridi-router/packages/logging/deno.jsonc
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "exports": "./main.ts",
   "imports": {
-    "logger": "jsr:@logtape/logtape@0.8.0",
-    "yaml": "jsr:@std/yaml@1.0.5",
+    "pino": "npm:pino",
+    "pino-opentelemetry-transport": "npm:pino-opentelemetry-transport",
     "flat": "npm:flat",
     "@ridi-router/env/": "../env/"
   }
