--- a/apps/ridi-router/packages/lib/deno.jsonc
+++ b/apps/ridi-router/packages/lib/deno.jsonc
@@ -6,6 +6,7 @@
 		"sqlite": "jsr:@db/sqlite@0.12",
 		"postgres": "npm:postgres",
 		"valibot": "jsr:@valibot/valibot@0.42.1",
-		"@ridi-router/logging/": "../logging/"
+		"@ridi-router/logging/": "../logging/",
+		"@ridi-router/env/": "../env/"
 	}
 }
