--- a/apps/expo-app/tsconfig.json
+++ b/apps/expo-app/tsconfig.json
@@ -7,6 +7,7 @@
 		// "noUncheckedIndexedAccess": true,
 		// "strictFunctionTypes": true,
 		// "exactOptionalPropertyTypes": true,
+		"jsx": "react-jsx",
 		"skipLibCheck": true,
 		"strict": true,
 		"baseUrl": ".",
