--- a/services/ridi-router/Dockerfile
+++ b/services/ridi-router/Dockerfile
@@ -27,8 +27,7 @@ RUN cd map-data-handler && deno install --lock deno.lock --frozen=true --entrypo
 RUN cd router-handler && deno install --lock deno.lock --frozen=true --entrypoint main.ts
 
 ENV RIDI_ROUTER_BIN=./ridi-router
-RUN curl -L "https://github.com/tomsjansons/ridi-router/releases/download/${RIDI_ROUTER_VERSION}/
-ridi-router-linux-amd64.zip" -o ridi-router-linux-amd64.zip \
+RUN curl -L "https://github.com/tomsjansons/ridi-router/releases/download/${RIDI_ROUTER_VERSION}/ridi-router-linux-amd64.zip" -o ridi-router-linux-amd64.zip \
 		&& unzip ridi-router-linux-amd64.zip \
 		&& mv ridi-router-linux-amd64 ridi-router \
     && chmod +x ridi-router
