--- a/services/ridi-router/Dockerfile
+++ b/services/ridi-router/Dockerfile
@@ -22,9 +22,9 @@ ENV RIDI_ENV=prod
 COPY . .
 ENV REGION_LIST=./region-list-prod.json
 RUN chmod +x startup.sh
-RUN cd deploy-handler && deno install --lock deno.lock --frozen=true --entrypoint main.ts
-RUN cd map-data-handler && deno install --lock deno.lock --frozen=true --entrypoint main.ts
-RUN cd router-handler && deno install --lock deno.lock --frozen=true --entrypoint main.ts
+RUN cd deploy-handler && deno install --entrypoint main.ts
+RUN cd map-data-handler && deno install --entrypoint main.ts
+RUN cd router-handler && deno install --entrypoint main.ts
 
 ENV RIDI_ROUTER_BIN=./ridi-router
 RUN curl -L "https://github.com/tomsjansons/ridi-router/releases/download/${RIDI_ROUTER_VERSION}/ridi-router-linux-amd64.zip" -o ridi-router-linux-amd64.zip \
