--- a/services/ridi-router/docker-compose-router-handler.yaml
+++ b/services/ridi-router/docker-compose-router-handler.yaml
@@ -5,7 +5,7 @@ services:
       file: ./docker-compose-base.yaml
       service: deno_service
     volumes:
-      - /var/log/ridi-service:/var/log/ridi-service-router
+      - /var/log/ridi-service-router:/var/log/ridi-service
     command: ./startup.sh ./router-handler/main.ts
     environment:
       SUPABASE_URL: ${SUPABASE_URL}
