--- a/services/ridi-router/packages/messaging/deno.jsonc
+++ b/services/ridi-router/packages/messaging/deno.jsonc
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"exports": "./main.ts",
 	"imports": {
-		"postgres": "npm:postgres",
-		"@ridi-router/logging/": "../logging/",
+		"postgres": "npm:postgres@3",
+		"@ridi-router/logging/": "../logging/"
 	}
 }
