--- a/services/ridi-router/map-data-handler/deno.json
+++ b/services/ridi-router/map-data-handler/deno.json
@@ -6,9 +6,9 @@
 	"imports": {
 		"valibot": "jsr:@valibot/valibot@0.42.1",
 		"p-queue": "npm:p-queue@8",
-		"to-geo-json": "npm:@tmcw/togeojson",
-		"xmldom": "npm:xmldom",
-		"postgres": "npm:postgres",
+		"to-geo-json": "npm:@tmcw/togeojson@6",
+		"xmldom": "npm:xmldom@0.6",
+		"postgres": "npm:postgres@3",
 		"@ridi-router/logging/": "../packages/logging/",
 		"@ridi-router/env/": "../packages/env/"
 	}
