--- a/supabase/functions/trpc/deno.jsonc
+++ b/supabase/functions/trpc/deno.jsonc
@@ -7,7 +7,8 @@
 		"@trpc/server": "npm:@trpc/server@10",
 		"@trpc/server/adapters/fetch": "npm:@trpc/server@10/adapters/fetch",
 		"valibot": "jsr:@valibot/valibot@0.42",
-		"postgres": "npm:postgres@3",
+		"postgres": "https://deno.land/x/postgresjs/types/index.d.ts",
+		"postgres/": "https://deno.land/x/postgresjs/",
 		"remeda": "npm:remeda@2",
 		"superjson": "npm:superjson@2",
 		"@ridi-router/messaging/": "../../../services/ridi-router/packages/messaging/",
