--- a/services/ridi-router/packages/lib/deno.jsonc
+++ b/services/ridi-router/packages/lib/deno.jsonc
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"exports": "./main.ts",
 	"imports": {
-		"postgres": "npm:postgres",
+		"postgres": "https://deno.land/x/postgresjs/types/index.d.ts",
+		"postgres/": "https://deno.land/x/postgresjs/",
 		"valibot": "jsr:@valibot/valibot@0.42.1",
 		"@ridi-router/logging/": "../logging/",
 		"@ridi-router/env/": "../env/"
