fix: keep the port in local dev

--- a/services/ridi-router/.env.example
+++ b/services/ridi-router/.env.example
@@ -1,4 +1,4 @@
-SUPABASE_URL=xxx
+SUPABASE_URL=http://127.0.0.1:54321
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 SUPABASE_SECRET_KEY=xxx
 REGION_LIST="../region-list-local.json"
