--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -33,6 +33,7 @@
 		"@tanstack/react-query": "^5.59.19",
 		"@trpc/client": "11.0.0-rc.576",
 		"@trpc/server": "11.0.0-rc.576",
+		"@turf/turf": "^7.2.0",
 		"@vis.gl/react-maplibre": "1.0.0-alpha.4",
 		"babel-plugin-react-compiler": "19.0.0-beta-8a03594-20241020",
 		"class-variance-authority": "^0.7.0",
