--- a/apps/package.json
+++ b/apps/package.json
@@ -12,9 +12,26 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.19.0",
 		"@types/bun": "^1.1.9",
+		"@types/eslint": "^9.6.1",
 		"@types/node": "^22.5.4",
+		"@typescript-eslint/eslint-plugin": "^8.22.0",
+		"@typescript-eslint/parser": "^8.22.0",
 		"concurrently": "^9.0.0",
+		"eslint": "^9.19.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-import-resolver-typescript": "^3.7.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-markdown": "^5.1.0",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-tailwindcss": "^3.18.0",
+		"globals": "^15.14.0",
 		"open": "^10.1.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4"
