--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -22,6 +22,7 @@
 		"@expo/vector-icons": "^14.0.4",
 		"@legendapp/motion": "^2.4.0",
 		"@maplibre/maplibre-react-native": "10.0.0-alpha.22",
+		"@miblanchard/react-native-slider": "^2.6.0",
 		"@nanostores/react": "^0.8.0",
 		"@react-navigation/native": "^6.0.2",
 		"@rn-primitives/alert-dialog": "^1.1.0",
