--- a/apps/expo-app/tsconfig.json
+++ b/apps/expo-app/tsconfig.json
@@ -1,30 +1,26 @@
 {
-	"extends": "expo/tsconfig.base",
-	"compilerOptions": {
-		"noImplicitAny": true,
-		"allowJs": false,
-		"strictNullChecks": true,
-		// "noUncheckedIndexedAccess": true,
-		// "strictFunctionTypes": true,
-		// "exactOptionalPropertyTypes": true,
-		"jsx": "react-jsx",
-		"skipLibCheck": true,
-		"strict": true,
-		"baseUrl": ".",
-		"paths": {
-			"~/*": [
-				"*"
-			]
-		}
-	},
-	"include": [
-		"**/*.ts",
-		"**/*.tsx",
-		".expo/types/**/*.ts",
-		"expo-env.d.ts",
-		"nativewind-env.d.ts"
-	],
-	"exclude": [
-		"**/node_modules/**/*"
-	]
+  "extends": "expo/tsconfig.base",
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "allowJs": false,
+    "strictNullChecks": true,
+    // "noUncheckedIndexedAccess": true,
+    // "strictFunctionTypes": true,
+    // "exactOptionalPropertyTypes": true,
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["*"]
+    }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
+  ],
+  "exclude": ["**/node_modules/**/*"]
 }
