feat: expo with hono rpc

--- a/apps/expo-app/.env.example
+++ b/apps/expo-app/.env.example
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_SUPABASE_URL=xxx
+EXPO_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
 EXPO_PUBLIC_SUPABASE_ANON_KEY=xxx
+EXPO_PUBLIC_API_URL=http://127.0.0.1:8787
