--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -56,6 +56,7 @@
     "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "geojson": "^0.5.0",
+    "hono": "^4.6.20",
     "lucide-react-native": "^0.441.0",
     "maplibre-gl": "^4.7.1",
     "nanostores": "^0.11.3",
