--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -11,6 +11,7 @@
     "hono": "^4.6.20",
     "pino": "^9.6.0",
     "postgres": "^3.4.5",
+    "remeda": "^2.20.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
