--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -6,6 +6,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.18.3",
     "@hono/zod-validator": "^0.4.2",
     "@supabase/supabase-js": "^2.48.1",
     "hono": "^4.6.20",
