--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "@ridi/astro-app",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -24,9 +24,5 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
-  },
-  "devDependencies": {
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1"
   }
 }
