--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -20,11 +20,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@legendapp/motion": "^2.4.0",
     "@maplibre/maplibre-react-native": "10.0.0-alpha.22",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@nanostores/react": "^0.8.0",
     "@react-navigation/native": "^6.0.2",
+    "@ridi/api-contracts": "workspace:^",
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/label": "^1.0.4",
     "@rn-primitives/popover": "^1.1.0",
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^5.59.19",
     "@trpc/client": "11.0.0-rc.576",
     "@trpc/server": "11.0.0-rc.576",
+    "@ts-rest/core": "^3.51.0",
     "@turf/turf": "^7.2.0",
     "@vis.gl/react-maplibre": "1.0.0-alpha.4",
     "babel-plugin-react-compiler": "19.0.0-beta-8a03594-20241020",
@@ -56,7 +57,6 @@
     "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "geojson": "^0.5.0",
-    "hono": "^4.6.20",
     "lucide-react-native": "^0.441.0",
     "maplibre-gl": "^4.7.1",
     "nanostores": "^0.11.3",
@@ -77,8 +77,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^0.42.1",
-    "xksuid": "^0.0.4"
+    "xksuid": "^0.0.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -96,7 +96,6 @@
       "reactNativeDirectoryCheck": {
         "enabled": true,
         "exclude": [
-          "@legendapp/state",
           "@rn-primitives/label",
           "@rn-primitives/slot",
           "@rn-primitives/types",
@@ -108,7 +107,6 @@
           "tailwind-merge",
           "tailwindcss",
           "tailwindcss-animate",
-          "valibot",
           "xksuid",
           "@vis.gl/react-maplibre",
           "maplibre-gl"
