--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -9,6 +9,7 @@
     "@ridi/api-contracts": "workspace:^",
     "@supabase/supabase-js": "^2.48.1",
     "@ts-rest/serverless": "^3.51.0",
+    "@turf/turf": "^7.2.0",
     "pino": "^9.6.0",
     "postgres": "^3.4.5",
     "remeda": "^2.20.0",
