fix: auth loops

--- a/services/cfw-api/wrangler.toml
+++ b/services/cfw-api/wrangler.toml
@@ -10,6 +10,7 @@ enabled = true
 # https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 [vars]
 SUPABASE_URL = "http://127.0.0.1:54321"
+RIDI_APP_URL = "http://127.0.0.1:8081"
 
 # Note: Use secrets to store sensitive data.
 # https://developers.cloudflare.com/workers/configuration/secrets/
