--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -23,6 +23,8 @@
     "@maplibre/maplibre-react-native": "10.0.0-alpha.22",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@nanostores/react": "^0.8.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
     "@ridi/api-contracts": "workspace:^",
     "@rn-primitives/alert-dialog": "^1.1.0",
@@ -32,7 +34,9 @@
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
     "@supabase/supabase-js": "^2.45.4",
-    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/query-async-storage-persister": "^5.66.0",
+    "@tanstack/query-persist-client-core": "^5.66.0",
+    "@tanstack/react-query": "^5.66.0",
     "@trpc/client": "11.0.0-rc.576",
     "@trpc/server": "11.0.0-rc.576",
     "@ts-rest/core": "^3.51.0",
@@ -58,6 +62,7 @@
     "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "geojson": "^0.5.0",
+    "idb-keyval": "^6.2.1",
     "lucide-react-native": "^0.441.0",
     "maplibre-gl": "^4.7.1",
     "nanostores": "^0.11.3",
@@ -100,9 +105,6 @@
           "@rn-primitives/label",
           "@rn-primitives/slot",
           "@rn-primitives/types",
-          "@trpc/client",
-          "@trpc/react-query",
-          "@trpc/server",
           "class-variance-authority",
           "clsx",
           "tailwind-merge",
