--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ridi/expo-app",
-  "main": "index.ts",
+  "main": "index.tsx",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --clear",
@@ -65,6 +65,7 @@
     "idb-keyval": "^6.2.1",
     "lucide-react-native": "^0.441.0",
     "maplibre-gl": "^4.7.1",
+    "moti": "^0.30.0",
     "nanostores": "^0.11.3",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
@@ -88,6 +89,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^19.0.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
