--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prettier-plugin-astro": "^0.14.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "resolutions": {
+    "react": "18.2.0"
   }
 }
-
