--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -49,6 +49,7 @@
     "expo-auth-session": "^5.5.2",
     "expo-background-fetch": "~12.0.1",
     "expo-build-properties": "~0.12.5",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
