--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -53,6 +53,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-network": "~6.0.1",
