--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
+  "workspaces": [
+    "./apps/*",
+    "./services/*",
+    "./libs/*",
+    "./infra"
+  ],
   "resolutions": {
     "react": "18.2.0"
   }
