--- a/apps/astro-app/package.json
+++ b/apps/astro-app/package.json
@@ -22,7 +22,6 @@
     "react-dom": "^18.2.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.11",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.11"
   }
 }
