--- a/libs/ridi-router-contracts/package.json
+++ b/libs/ridi-router-contracts/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@ridi/api-contracts",
+  "name": "@ridi/ridi-router-contracts",
   "version": "1.0.0",
   "main": "src/index.ts",
   "type": "module",
   "dependencies": {
+    "@ridi/api-contracts": "workspace:^",
     "@ts-rest/core": "^3.51.0",
     "zod": "^3.24.1"
   }
