--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
+    "@total-typescript/tsconfig": "^1.0.4",
     "@types/bun": "^1.1.9",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.5.4",
@@ -25,20 +26,22 @@
     "eslint-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
-    "globals": "^15.14.0",
-    "open": "^10.1.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "prettier-plugin-astro": "^0.14.1"
   },
   "workspaces": [
-    "./apps/*",
-    "./services/*",
-    "./libs/*",
-    "./infra"
+    "apps/*",
+    "services/*",
+    "libs/*",
+    "infra"
   ],
   "resolutions": {
     "react": "18.2.0"
+  },
+  "dependencies": {
+    "typescript": "^5.8.1-rc"
+  },
+  "installConfig": {
+    "pnp": false
   }
 }
