--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@ridi/api-contracts": "workspace:^",
+    "@ridi/logger": "workspace:^",
+    "@ridi/messaging": "workspace:^",
     "@supabase/supabase-js": "^2.48.1",
     "@ts-rest/serverless": "^3.51.0",
     "@turf/turf": "^7.2.0",
