--- a/services/ridi-router/package.json
+++ b/services/ridi-router/package.json
@@ -13,8 +13,12 @@
   "description": "",
   "dependencies": {
     "@ridi/ridi-router-contracts": "workspace:^",
+    "@ridi/logger": "workspace:^",
+    "@ridi/messaging": "workspace:^",
     "@ts-rest/fastify": "^3.52.0",
     "fastify": "^5.2.1",
-    "typescript": "^5.8.1-rc"
+    "json-nd": "^1.0.0",
+    "typescript": "^5.8.1-rc",
+    "zod": "^3.24.1"
   }
 }
