--- a/services/ridi-router/tsconfig.json
+++ b/services/ridi-router/tsconfig.json
@@ -3,6 +3,6 @@
   "exclude": ["**/node_modules/**/*"],
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "rootDir": "src/"
+    "allowImportingTsExtensions": true
   }
 }
