--- a/services/ridi-router/.env.example
+++ b/services/ridi-router/.env.example
@@ -1,5 +1,5 @@
-ROUTER_BIN="../.ridi-data/ridi-router"
-REGION="europe/latvia"
-PBF_LOCATION="../.ridi-data/pbf/latvia-latest.osm.pbf"
-CACHE_LOCATION="../.ridi-data/cache/latvia/"
-ROUTER_VERSION="v0.6.20"
+ROUTER_BIN=../.ridi-data/ridi-router
+REGION=europe/latvia
+PBF_LOCATION=../.ridi-data/pbf/latvia-latest.osm.pbf
+CACHE_LOCATION=../.ridi-data/cache/latvia/
+ROUTER_VERSION=v0.6.20
