--- a/services/ridi-router/tsconfig.json
+++ b/services/ridi-router/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["**/node_modules/**/*"],
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "types": ["node"]
   }
 }
