--- a/services/router-service/package.json
+++ b/services/router-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ridi-router",
+  "name": "@ridi/router-service",
   "version": "1.0.0",
   "main": "src/index.ts",
   "type": "module",
