fix: minor fixes in map data download

--- a/services/map-data-init/.env.example
+++ b/services/map-data-init/.env.example
@@ -1,4 +1,6 @@
 REGION=europe/latvia
-MAP_DATA=../.ridi-data/map-data/
+MAP_DATA_LOCATION=../.ridi-data/map-data/
+PBF_LOCATION=../.ridi-data/map-data/map.osm.pbf
+KML_LOCATION=../.ridi-data/map-data/map.kml
 PBF_REMOTE_URL=https://download.geofabrik.de/europe/latvia-latest.osm.pbf
 KML_REMOTE_URL=https://download.geofabrik.de/europe/latvia.kml
