--- a/libs/db-queries/package.json
+++ b/libs/db-queries/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ridi/messaging",
+  "name": "@ridi/db-queries",
   "version": "1.0.0",
   "main": "src/index.ts",
   "type": "module",
