--- a/services/map-data-init/package.json
+++ b/services/map-data-init/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ridi/db-queries": "workspace:^",
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
-    "typescript": "^5.8.1-rc"
+    "@tmcw/togeojson": "git+https://github.com/tmcw/togeojson.git",
+    "postgres": "^3.4.5",
+    "typescript": "^5.8.1-rc",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@types/xmldom": "^0.1.34",
     "pino-pretty": "^13.0.0"
   }
 }
