--- a/services/map-data-init/.env.latvia
+++ b/services/map-data-init/.env.latvia
@@ -1,6 +1,6 @@
 REGION=europe/latvia
-MAP_DATA_LOCATION=../.ridi-data/map-data/
-PBF_LOCATION=../.ridi-data/map-data/map.osm.pbf
-KML_LOCATION=../.ridi-data/map-data/map.kml
+MAP_DATA_LOCATION=../.ridi-data/map-data/latvia
+PBF_LOCATION=../.ridi-data/map-data/latvia/map.osm.pbf
+KML_LOCATION=../.ridi-data/map-data/latvia/map.kml
 PBF_REMOTE_URL=https://download.geofabrik.de/europe/latvia-latest.osm.pbf
 KML_REMOTE_URL=https://download.geofabrik.de/europe/latvia.kml
