fix: local setup

--- a/libs/messaging/package.json
+++ b/libs/messaging/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.ts",
   "type": "module",
   "dependencies": {
+    "@ridi/logger": "workspace:^",
     "postgres": "^3.4.5"
   }
 }
