--- a/services/router-service/.env.latvia
+++ b/services/router-service/.env.latvia
@@ -3,3 +3,4 @@ REGION=europe/latvia
 PBF_LOCATION=../.ridi-data/map-data/latvia/map.osm.pbf
 CACHE_LOCATION=../.ridi-data/cache/latvia
 ROUTER_VERSION=v0.6.20
+PORT=2727
