--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tsx": "^4.19.3"
   },
   "resolutions": {
     "react": "18.2.0"
