fix: rule set deleted queries

--- a/services/queue-service/.env.base
+++ b/services/queue-service/.env.base
@@ -1,1 +1,2 @@
 SUPABASE_DB_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
+ROUTER_SERVICE_LIST='{"europe/latvia":"http://127.0.0.1:2727","europe/greece":"http://127.0.0.12728"}'
