--- a/services/queue-service/package.json
+++ b/services/queue-service/package.json
@@ -14,8 +14,10 @@
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "@ridi/router-service-contracts": "workspace:^",
+    "@ts-rest/core": "^3.51.0",
     "postgres": "^3.4.5",
-    "typescript": "^5.8.1-rc"
+    "typescript": "^5.8.1-rc",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/xmldom": "^0.1.34",
