--- a/services/router-cache-init/package.json
+++ b/services/router-cache-init/package.json
@@ -13,7 +13,8 @@
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "json-nd": "^1.0.0",
-    "typescript": "^5.8.1-rc"
+    "typescript": "^5.8.1-rc",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "pino-pretty": "^13.0.0"
