--- a/services/map-data-init/package.json
+++ b/services/map-data-init/package.json
@@ -13,8 +13,9 @@
     "@ridi/db-queries": "workspace:^",
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
-    "@tmcw/togeojson": "git+https://github.com/tmcw/togeojson.git",
+    "@tmcw/togeojson": "^6.0.1",
     "postgres": "^3.4.5",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.1-rc",
     "xmldom": "^0.6.0",
     "zod": "^3.24.1"
