--- a/infra/router-service/Containerfile
+++ b/infra/router-service/Containerfile
@@ -1,4 +1,4 @@
-FROM node:23-alpine as build
+FROM node:23-alpine AS build
 
 WORKDIR /app
 
@@ -22,4 +22,4 @@ COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 RUN pnpm install --prod
 
-CMD ["node", "./services/ridi-router/src/index.ts"]
+CMD ["node", "--import=tsx", "./services/router-service/src/index.ts"]
