--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "tsx": "^4.19.3"
+    "prettier-plugin-astro": "^0.14.1"
   },
   "resolutions": {
     "react": "18.2.0"
