--- a/services/router-cache-init/package.json
+++ b/services/router-cache-init/package.json
@@ -13,6 +13,7 @@
     "@ridi/logger": "workspace:^",
     "@ridi/messaging": "workspace:^",
     "json-nd": "^1.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.1-rc",
     "zod": "^3.24.1"
   },
