--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0"
   },
   "dependencies": {
+    "tsx": "^4.19.3",
     "typescript": "^5.8.1-rc"
   },
   "installConfig": {
