--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -88,7 +88,8 @@
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
     "xksuid": "^0.0.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-geojson": "^0.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
