--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -65,6 +65,7 @@
     "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "geojson": "^0.5.0",
+    "gpx-builder": "^5.4.0",
     "idb-keyval": "^6.2.1",
     "lucide-react-native": "^0.441.0",
     "maplibre-gl": "^4.7.1",
